tests/functional/lang/eval-fail-select-err.err.exp
error:
       … while evaluating the attribute 'src.meta'
         at /pwd/eval-fail-select-err.nix:2:3:
            1| let
            2|   somepkg.src = throw "invalid foo bar";
             |   ^
            3| in somepkg.src.meta

       … while evaluating an expression to select 'meta' on it
         at /pwd/eval-fail-select-err.nix:3:16:
            2|   somepkg.src = throw "invalid foo bar";
            3| in somepkg.src.meta
             |                ^
            4|

       … caused by explicit throw
         at /pwd/eval-fail-select-err.nix:2:17:
            1| let
            2|   somepkg.src = throw "invalid foo bar";
             |                 ^
            3| in somepkg.src.meta

       error: invalid foo bar
